refactor and add java19 virtual thread blocking benchmark