@@ -22,11 +22,15 @@ tasks.test { useJUnitPlatform() }
 
 tasks.withType<KotlinCompile> { kotlinOptions.jvmTarget = "1.8" }
 
+tasks.withType<JavaExec> { environment("JAVA_TOOL_OPTIONS", "--enable-preview --add-modules=jdk.incubator.concurrent") }
+
 application { mainClass.set("MainKt") }
 
 sourceSets { create("benchmarks") { java.srcDir("src/benchmarks/kotlin") } }
 
 kotlin {
+  jvmToolchain { languageVersion.set(JavaLanguageVersion.of(19)) }
+
   sourceSets {
     getByName("benchmarks") {
       dependencies {
@@ -34,6 +38,9 @@ kotlin {
         implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4")
         implementation("org.jetbrains.kotlinx:kotlinx-coroutines-reactor:1.6.4")
         implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.0")
+
+        // netty eventloop
+        implementation("io.netty:netty-all:4.1.84.Final")
       }
     }
   }
@@ -43,21 +50,26 @@ benchmark {
   configurations {
     getByName("main") {
       // cleanest no ops benchmark
-      include("CoroutineDispatcher")
-      include("CoroutineSuspendWrap")
-      include("ReactorScheduler")
-      include("ReactorWrapper")
+      //      include("SyncNoOps")
+            include("CoroutineDispatcher")
+      //      include("CoroutineWrapNoOps")
+      //      include("ReactorScheduler")
+      //      include("ReactorWrapNoOps")
 
       // cleanest no ops non-blocking callback wrapper benchmark
-      include("CoroutineSuspendNonBlockingWrapper")
-      include("ReactorNonBlockingWrapper")
+      //      include("CoroutineWrapNonBlockingIO")
+      //      include("ReactorWrapNonBlockingIO")
 
       // TODO: cleanest no ops blocking wrapper benchmark
+      include("CoroutineWrapBlockingIOWithDispatcher")
+      include("CoroutineWrapBlockingIOWithJava19VirtualThread")
+      include("CoroutineWrapBlockingIOWithLargeThreadPool")
+      include("Java19VirtualThreadWrapBlockingIO")
 
       // real world case
-      include("OneByOneOps")
-      include("ParallelCoroutineOps")
-      include("ParallelReactorOps")
+      //      include("OneByOneOps")
+      //      include("ParallelCoroutineOps")
+      //      include("ParallelReactorOps")
 
       warmups = 2 // number of warmup iterations
       iterations = 2 // number of iterations
